unpackaged/main/default/objects/Capital_Call__c/Capital_Call__c.object-meta.xml
<CustomObject>
    <description>To capture the amount that is called from limited partners for each commitment</description>
    <label>Capital Call</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>CC No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capital Calls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>