unpackaged/main/default/objects/Capital_Call__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <formula>( Call_Amount__c  -  Call_Amount_Received__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Due</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>