unpackaged/main/default/objects/Capital_Call__c/fields/Call_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Call_Amount_Received__c</fullName>
    <label>Call Amount Received</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>