unpackaged/main/default/objects/Capital_Call__c/fields/Capital_Amount__c.field-meta.xml
<CustomField>
    <fullName>Capital_Amount__c</fullName>
    <label>Capital Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>