unpackaged/main/default/objects/Capital_Call__c/fields/CapitalCalledpc__c.field-meta.xml
<CustomField>
    <fullName>CapitalCalledpc__c</fullName>
    <formula>Call_Amount__c / Commitment__r.Commitment_Amount_nearest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital Called %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>