unpackaged/main/default/objects/Capital_Call__c/fields/Commitment__c.field-meta.xml
<CustomField>
    <fullName>Commitment__c</fullName>
    <label>Commitment</label>
    <referenceTo>Commitment__c</referenceTo>
    <relationshipLabel>Capital Calls</relationshipLabel>
    <relationshipName>Capital_Calls</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>