unpackaged/main/default/objects/Capital_Call__c/fields/Fund_Drawdown__c.field-meta.xml
<CustomField>
    <fullName>Fund_Drawdown__c</fullName>
    <label>Fund Drawdown</label>
    <referenceTo>Fund_Drawdown__c</referenceTo>
    <relationshipLabel>Capital Calls</relationshipLabel>
    <relationshipName>Capital_Calls</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>