unpackaged/main/default/objects/Capital_Call__c/fields/TotalCapitalCalledpc__c.field-meta.xml
<CustomField>
    <fullName>TotalCapitalCalledpc__c</fullName>
    <formula>Commitment__r.Total_Amount_Called__c / Commitment__r.Commitment_Amount_nearest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Capital Called %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>