unpackaged/main/default/objects/Capital_Call__c/validationRules/Check_Call_Amount_Received.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Call_Amount_Received</fullName>
    <active>true</active>
    <errorConditionFormula>if(Call_Amount_Received__c &lt;0,true,false)</errorConditionFormula>
    <errorDisplayField>Call_Amount_Received__c</errorDisplayField>
    <errorMessage>Call Amount Received cannot be less than zero.</errorMessage>
</ValidationRule>