unpackaged/main/default/objects/Capital_Call__c/validationRules/Check_Capital_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Capital_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>if( Capital_Amount__c &lt;0,true,false)</errorConditionFormula>
    <errorDisplayField>Capital_Amount__c</errorDisplayField>
    <errorMessage>Capital Amount cannot be less than zero.</errorMessage>
</ValidationRule>