unpackaged/main/default/objects/Capital_Call__c/validationRules/Check_Management_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Management_Fee</fullName>
    <active>true</active>
    <errorConditionFormula>if( Management_Fee__c &lt;0,true,false)</errorConditionFormula>
    <errorDisplayField>Management_Fee__c</errorDisplayField>
    <errorMessage>Management Fee cannot be less than zero.</errorMessage>
</ValidationRule>