unpackaged/main/default/objects/Capital_Call__c/validationRules/Check_Other_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Other_Fee</fullName>
    <active>true</active>
    <errorConditionFormula>if( Other_Fee__c &lt;0,true,false)</errorConditionFormula>
    <errorDisplayField>Other_Fee__c</errorDisplayField>
    <errorMessage>Other Fee cannot be less than zero.</errorMessage>
</ValidationRule>